--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -5,19 +5,21 @@
 <div class = "text-center h1" style= "background-color: cadetblue; color: white;"> Entrar </div>
 {% from "suporteenvio.html" import render_field %}
 <div class="row">
-    <div class="col-md-5"></div>
-    <div class="col-md-5">
-<div class="container">
+    <div class="text-center"></div>
+    <div class="text-center">
+<div class="container" style="margin-top: 30px;">
     
     <form method="post" enctype="multipart/form-data">
       <div>
-            {{ render_field(form.usuario)}}
-            {{ render_field(form.senha) }}
+            {{ render_field(form.usuario, class="form-control-sm", style="border: 1px solid cadetblue; background-color: #F0F8FF")}}
+            {{ render_field(form.senha, class="form-control-sm", style="border: 1px solid cadetblue; background-color: #F0F8FF") }}
     
       </div>
-      <p><input type=submit value="Login" class="btn btn-info" style="background-color: cadetblue; border-color: cadetblue; color:white;"></p>
+      <p>
+        <input type=submit value="Login" class="btn btn-info btn-control" style="background-color: cadetblue; border-color: cadetblue; color:white;"></p>
     </form>
 </div> 
 </div>
 
 {% endblock content %}
+<!--ATUALIZAR-->
