--- a/proj_SpecialIssues/website/templates/admin/inserirnova.html
+++ b/proj_SpecialIssues/website/templates/admin/inserirnova.html
@@ -1,24 +1,52 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
-<div class = "text-center h1" style= "background-color: cadetblue; color: white;"> Inserir nova Special Issue </div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<div class="text-center h1" style="background-color: cadetblue; color: white;"> Inserir nova Special Issue </div>
 <div class="container my-4 ">
-    
+    {% include '_messages.html' %}
+
     {% from "suporteenvio.html" import render_field %}
     <form method="post" enctype="multipart/form-data">
-      <div class="text-center">
-            {{ render_field(form.editora, class="form-control-sm", style="border: 1px solid cadetblue")}}
-            {{ render_field(form.revista, class="form-control-sm", style="border: 1px solid cadetblue") }}
-            {{ render_field(form.titulo, class="form-control-sm", style="border: 1px solid cadetblue") }}
-            {{ render_field(form.link, class="form-control-sm", style="border: 1px solid cadetblue") }}
-            {{ render_field(form.prazo, class="form-control-sm", style="border: 1px solid cadetblue") }}
-            {{ render_field(form.datanot, class="form-control-sm", style="border: 1px solid cadetblue") }}
-            {{ render_field(form.detalhes, class="form-control-sm", style="border: 1px solid cadetblue") }}
-      </div>
-      <p class="text-center"><input type=submit value="Enviar" class="btn btn-info" style="background-color: cadetblue; border-color: cadetblue; color:white;"></p>
-    </form></div>
+        <div class="text-center">
+            {{ render_field(form.editora, class="form-control-sm", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            {{ render_field(form.revista, class="form-control-sm", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            {{ render_field(form.titulo, class="form-control-sm", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            {{ render_field(form.link, class="form-control-sm", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            {{ render_field(form.prazo, class="form-control-sm datepicker", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            {{ render_field(form.datanot, class="form-control-sm datepicker", style="border: 1px solid cadetblue; width: 400px; border-radius: 5px") }}
+            <div class="text-center">
+                <label for="{{ form.detalhes.id }}" style="font-weight: bold;">Detalhes</label>
+            </div>
+            <div class="text-center">
+                <textarea name="{{ form.detalhes.name }}" id="{{ form.detalhes.id }}" class="form-control-sm resize-diagonal" style="border: 1px solid cadetblue; min-width: 400px; min-height: 200px; width: 400px; border-radius: 5px" rows="3">{{ form.detalhes.data }}</textarea>
+            </div>
+            
+        </div>
+        <p class="text-center">
+            <div class="mt-3 text-center">
+                <button type="submit" name="submit_and_back" class="btn btn-primary" style="background-color: cadetblue; border-color: cadetblue; color:white;">Enviar e voltar ao Menu Principal</button>
+    <button type="submit" name="submit_and_insert" class="btn btn-success" style="background-color: cadetblue; border-color: cadetblue; color:white;">Enviar e Inserir Nova Special Issue</button>
+            </div>
+        </p>
+    </form>
+</div>
+<style>
+    /* Estilo para permitir redimensionamento diagonal */
+    .resize-diagonal {
+        resize: both;
+        overflow: auto;
+    }
+</style>
 
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+      flatpickr(".datepicker", {
+          dateFormat: "d/m/Y" 
+          appendTo: document.querySelector('.datepicker-wrapper') 
+
+      });
+  });
+</script>
 {% endblock content %}
-
-<!--ATUALIZADO-->
