--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -2,12 +2,29 @@
 
 {% block content %}
 
-<div class = "text-center h1" style= "background-color: cadetblue; color: white;"> Entrar </div>
+{% include 'navbar.html' %}
+<style>
+    .btn-login {
+        background-color: cadetblue;
+        border-color: cadetblue;
+        color: white;
+        transition: background-color 0.5s; 
+    }
+    .btn-login:hover{
+        background-color: #2b8c8c;
+        border-color: #2b8c8c;;
+        color: white;
+    }
+</style>
+<div class = "text-center h1" style= "color: cadetblue;"> Entrar </div>
 {% from "suporteenvio.html" import render_field %}
 <div class="row">
     <div class="text-center"></div>
     <div class="text-center">
+
 <div class="container" style="margin-top: 30px;">
+    
+    {% include '_messages.html' %}
     
     <form method="post" enctype="multipart/form-data">
       <div>
@@ -16,7 +33,7 @@
     
       </div>
       <p>
-        <input type=submit value="Login" class="btn btn-info btn-control" style="background-color: cadetblue; border-color: cadetblue; color:white;"></p>
+        <input type=submit value="Login" class="btn btn-info btn-control btn-login"></p>
     </form>
 </div> 
 </div>
