--- a/proj_SpecialIssues/website/templates/admin/index.html
+++ b/proj_SpecialIssues/website/templates/admin/index.html
@@ -1,12 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
-{% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for category, message in messages %}
-      <li class="alert alert-{{ category }}">{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+
+{% include 'navbar.html' %}
+{% include '_messages.html' %}
+
 {% endblock content %}
