--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -5,36 +5,70 @@
 {% include 'navbar.html' %}
 <style>
     .btn-login {
-        background-color: cadetblue;
-        border-color: cadetblue;
+        background-color: #0a497e;
+        border-color: #0a497e;
         color: white;
         transition: background-color 0.5s; 
     }
     .btn-login:hover{
-        background-color: #2b8c8c;
-        border-color: #2b8c8c;;
+        background-color: #113a5c;
+        border-color: #113a5c;
         color: white;
     }
+    .login-box {
+    width: 300px; 
+    padding: 20px; 
+    background-color: white; 
+    border-radius: 5px; 
+    box-shadow: 0px 0px 3px  #576672; 
+    margin: 0 auto; 
+    margin-top: 30px;
+}
+.h1-bg {
+        font-size: 40px;
+        text-align: center;
+        position: relative;
+    }
+    .h1-bg::before {
+        content: "";
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        right: 0;
+        height: 2px;
+        background: linear-gradient(to right, white, #0a497e, white); /* Começa mais escuro no meio e fica mais claro nas bordas */
+    }
 </style>
-<div class = "text-center h1" style= "color: cadetblue;"> Entrar </div>
+
 {% from "suporteenvio.html" import render_field %}
 <div class="row">
     <div class="text-center"></div>
     <div class="text-center">
 
-<div class="container" style="margin-top: 30px;">
+<div class="container" style="margin-top: 10px; text-align: center;">
     
-    {% include '_messages.html' %}
+    
     
     <form method="post" enctype="multipart/form-data">
-      <div>
-            {{ render_field(form.usuario, class="form-control-sm", style="border: 1px solid cadetblue; background-color: #F0F8FF")}}
-            {{ render_field(form.senha, class="form-control-sm", style="border: 1px solid cadetblue; background-color: #F0F8FF") }}
-    
-      </div>
-      <p>
-        <input type=submit value="Login" class="btn btn-info btn-control btn-login"></p>
+        <div class="login-box"> 
+            <div class="h1-bg">
+                <h1 class="text-center h1-bg" style="color: #0a497e ; font-size: 40px;"> Entrar </h1>
+            </div>
+            <div class="form-group">
+                <label for="{{ form.usuario.id }}" style="color: black">Usuário</label>
+                <div>{{ form.usuario(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe") }}</div>
+            </div>
+            <div class="form-group">
+                <label for="{{ form.senha.id }}" style="color: black;">Senha</label>
+                <div>{{ form.senha(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe" ) }}</div>
+            </div>
+            <p>
+                <input type="submit" value="Login" class="btn btn-info btn-control btn-login" style="margin-top: 10px;">
+            </p>
+        </div>
     </form>
+    
+    
 </div> 
 </div>
 
