--- a/proj_SpecialIssues/website/templates/navbar.html
+++ b/proj_SpecialIssues/website/templates/navbar.html
@@ -19,7 +19,7 @@ body {
     font-size: 13px; 
 }
 .search-button {
-    background-color: cadetblue;
+    background-color: #0a497e;
     border: none;
     border-radius: 5px;
     color: white;
@@ -28,7 +28,7 @@ body {
     transition: 0,3s;
 }
 .search-button:hover{
-    background-color: #2b8c8c;
+    background-color: #113a5c;
 }
 
 /* Estilo do ícone de lupa */
@@ -37,7 +37,7 @@ body {
 }
 
 .navbar {
-    background-color: cadetblue;
+    background-color: #0a497e;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -73,7 +73,7 @@ body {
 }
 
 .navbar-buttons a:hover {
-    background-color: #2b8c8c; 
+    background-color: #113a5c; 
     
 }
 
@@ -89,8 +89,9 @@ body {
             <p>Ciência da Computação</p>
         </div>
         <div class="navbar-buttons">
-            <a href="/" class="navbar-button">Home</a>
-            <a href="/login" class="navbar-button">Inserir Novas Special Issues</a>
+            <a href="/home" class="navbar-button">Home</a>
+            <a href="/inserirnovaspecialissue" class="navbar-button">Inserir Novas Special Issues</a>
+            <a href="/gerenciar"class="navbar-button">Gerenciar Special Issues</a>
             <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
             <input type="text" class="search-box" placeholder="Pesquisar palavras-chave">
             
