modified:   proj_SpecialIssues/website/__init__.py 	new file:   proj_SpecialIssues/website/__pycache__/__init__.cpython-310.pyc 	new file:   proj_SpecialIssues/website/adm/__pycache__/__init__.cpython-310.pyc 	new file:   proj_SpecialIssues/website/adm/__pycache__/forms.cpython-310.pyc 	new file:   proj_SpecialIssues/website/adm/__pycache__/models.cpython-310.pyc 	new file:   proj_SpecialIssues/website/adm/__pycache__/rotas.cpython-310.pyc 	modified:   proj_SpecialIssues/website/adm/rotas.py 	modified:   proj_SpecialIssues/website/templates/_messages.html 	modified:   proj_SpecialIssues/website/templates/admin/busca.html 	modified:   proj_SpecialIssues/website/templates/admin/editar.html 	modified:   proj_SpecialIssues/website/templates/admin/gerenciar.html 	new file:   proj_SpecialIssues/website/templates/admin/home.html 	modified:   proj_SpecialIssues/website/templates/admin/inserirnova.html 	modified:   proj_SpecialIssues/website/templates/navbar.html 	new file:   proj_SpecialIssues/website/templates/users/users_busca.html 	new file:   proj_SpecialIssues/website/templates/users/users_detalhes.html 	new file:   proj_SpecialIssues/website/templates/users/users_home.html 	new file:   proj_SpecialIssues/website/templates/users/users_navbar.html 	new file:   proj_SpecialIssues/website/users/__pycache__/users_models.cpython-310.pyc 	new file:   proj_SpecialIssues/website/users/__pycache__/users_rotas.cpython-310.pyc 	deleted:    proj_SpecialIssues/website/users/null 	new file:   proj_SpecialIssues/website/users/users_models.py 	new file:   proj_SpecialIssues/website/users/users_rotas.py

--- a/proj_SpecialIssues/website/templates/_messages.html
+++ b/proj_SpecialIssues/website/templates/_messages.html
@@ -1,22 +1,34 @@
 <style>
-  /* Reduza o tamanho da caixa das mensagens flash */
-  
   .alert {
-      padding: 5px 10px; /* Ajuste o padding conforme necessário */
-      max-width: 300px;
-      list-style-type: none;
-      text-align: center;
-      position: absolute;
-      
+    padding: 5px 10px; 
+    max-width: 300px;
+    list-style-type: none;
+    text-align: center;
+    position: absolute;
+    opacity: 1; 
+    transition: opacity 1s ease-in-out; 
   }
-  </style>
+
   
-  {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-      <ul class="flashes">
+  .alert.fade-out {
+    opacity: 0;
+  }
+</style>
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul class="flashes">
       {% for category, message in messages %}
-        <li class="alert alert-{{ category }}">{{ message }}</li>
+        <li class="alert alert-{{ category }}">
+          {{ message }}
+          <script>
+            
+            setTimeout(function() {
+              document.querySelector('.alert').classList.add('fade-out');
+            }, 3000);
+          </script>
+        </li>
       {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+    </ul>
+  {% endif %}
+{% endwith %}
