update navbar admin

--- a/proj_SpecialIssues/website/templates/admin/detalhes.html
+++ b/proj_SpecialIssues/website/templates/admin/detalhes.html
@@ -1,7 +1,7 @@
 <!--atualizar no meu pc-->
 {% extends 'layout.html' %}
 {% block content %}
-{% include 'navbar.html' %}
+{% include 'navbar2.html' %}
 
 <style>
     .container h1{
