--- a/proj_SpecialIssues/website/templates/admin/busca.html
+++ b/proj_SpecialIssues/website/templates/admin/busca.html
@@ -2,7 +2,7 @@
 
 {% extends 'layout.html' %}
 {% block content %}
-{% include 'navbar.html' %}
+{% include 'navbar2.html' %}
 
 <style>
     .container ul {
