--- a/proj_SpecialIssues/website/templates/admin/index.html
+++ b/proj_SpecialIssues/website/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-{% include 'navbar.html' %}
+{% include 'navbar2.html' %}
 {% include '_messages.html' %}
 
 {% endblock content %}
