--- a/proj_SpecialIssues/website/templates/admin/inserirnova.html
+++ b/proj_SpecialIssues/website/templates/admin/inserirnova.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-{% include 'navbar.html' %}
+{% include 'navbar2.html' %}
 {% include '_messages.html' %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
