--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% include 'navbar.html' %}
+{% include 'navbar2.html' %}
 <style>
     .btn-login {
         background-color: #0a497e;
