--- a/proj_SpecialIssues/website/templates/users/users_navbar.html
+++ b/proj_SpecialIssues/website/templates/users/users_navbar.html
@@ -6,118 +6,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Special Issues</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: white;
-        }
-
-        .search-form {
-            display: flex; /* Torna os elementos filhos flexíveis para alinhamento */
-            align-items: center; /* Alinha verticalmente ao centro */
-        }
-
-        .form-control {
-            margin-right: 10px;
-            padding: 4px;
-            border: 1px;
-            border-radius: 5px;
-            background-color: white;
-            width: 180px;
-            align-items: center;
-        }
-
-        .form-control::placeholder {
-            font-size: 13px;
-            text-align: left;
-        }
-
-        .search-button {
-            background-color: #0a497e;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            cursor: pointer;
-            padding: 7px 5px;
-            transition: 0.3s;
-            margin-left: 10px;
-            margin-right: 5px;
-        }
-
-        .search-button:hover {
-            background-color: #113a5c;
-            border-radius: 25px;
-        }
-
-        .navbar {
-            background-color: #0a497e;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 7px 20px;
-            box-shadow: 2px 2px 2px #ccc;
-        }
-
-        .navbar-title {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .navbar-title h1 {
-            margin: 0;
-            font-size: 30px;
-        }
-
-        .navbar-title p {
-            margin: 0;
-            font-size: 15px;
-        }
-
-        .navbar-buttons {
-            display: flex; 
-            align-items: center; 
-        }
-
-        .navbar-buttons a {
-            text-decoration: none;
-            color: white;
-            padding: 7px 20px;
-            margin-left: 15px;
-            transition: background-color 0.5s;
-            border-radius: 20px;
-        }
-
-        .navbar-buttons a:hover {
-            background-color: #033863;
-        }
-
     
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--css-->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles_nav.css') }}">
+
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-title">
-            <h1>Special Issues</h1>
-            <p>Ciência da Computação</p>
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      
+      <a class="navbar-brand me-auto" href="/">
+        <h1 class="titulo">Special Issues</h1>
+        <p class="subtitulo">Ciência da computação</p>
+      </a>
+    
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Special Issues</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="navbar-buttons">
-            <a href="/" class="navbar-button">Home</a>
-            
-            <form action="{{ url_for('users_search') }}" method="POST">
-                <div class="search-form">
-                    <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-                    <input type="text" class="form-control" placeholder="Pesquisar palavras-chave" autofocus="autofocus" name="search-box" value="{{ session.get('search_value', '') }}">
-                </div>
-            </form>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link mx-lg-1 {% if request.path == '/admin/home' %}active{% endif %}" href="/">Home</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="d-flex">
+        <form action="{{ url_for('search') }}" method="POST">
+          <div class="search-form">
+              <input type="text" class="form-control" placeholder="Pesquisar palavras-chave" autofocus="autofocus" name="search-box" value="{{ session.get('search_value', '') }}">
+              <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
 
-        </div>
-    </nav>
+          </div>
+        </form>
+       
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    </div>
+  </nav>
     {% include '_messages.html' %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
 {% endblock content %}
