fix navbar user

--- a/proj_SpecialIssues/website/templates/users/users_navbar.html
+++ b/proj_SpecialIssues/website/templates/users/users_navbar.html
@@ -30,7 +30,7 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link mx-lg-1 {% if request.path == '/admin/home' %}active{% endif %}" href="/">Home</a>
+              <a class="nav-link mx-lg-1 {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
             </li>
           </ul>
         </div>
