--- a/proj_SpecialIssues/website/templates/admin/detalhes.html
+++ b/proj_SpecialIssues/website/templates/admin/detalhes.html
@@ -1,23 +1,9 @@
 <!--atualizar no meu pc-->
 {% extends 'layout.html' %}
 {% block content %}
-{% include 'navbar2.html' %}
+{% include 'navbar.html' %}
 
-<style>
-    .container h1{
-        font-size: xx-large;
-        margin-top: 15px;
-        color: #0a497e;
-        margin-bottom: 15px;
-    }
-    .container b{
-        color: #0a497e;
-        
-    }
-
-</style>
-
-
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/detalhes.css') }}">
 
 <div class="container">
     <h1>{{ spi.titulo }}</h1>
