--- a/proj_SpecialIssues/website/templates/admin/gerenciar.html
+++ b/proj_SpecialIssues/website/templates/admin/gerenciar.html
@@ -1,61 +1,9 @@
 {% extends 'layout.html' %}
 {% block content %}
-{% include 'navbar2.html' %}
+{% include 'navbar.html' %}
 
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gerenciar.css') }}">
 
-<style>
-    .table {
-        width: 100%;
-        border-collapse: collapse;
-        margin: 20px 0;
-    }
-    .table td {
-        font-size: small;
-        border: 1px solid #ddd;
-    }
-    .table th, .table td {
-        padding: 7px;
-        text-align: center;
-        border-bottom: 1px solid #ddd;
-    }
-
-    .table th {
-        background-color: #0a497e;
-        font-weight: normal;
-        color: #f5f5f5;
-        text-align: center;
-    }
-
-    .table tr:hover {
-        background-color: #dbdfe7;
-    }
-
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-    .btn-control {
-        background-color: white;
-        border-color: #0a497e;
-        transition-duration: 0s;
-        color: #0a497e;
-    }
-    .btn-control:hover {
-        background-color: #113a5c;
-        border-color: #113a5c;
-        color: white;
-    }
-    .btn-danger {
-        background-color: white;
-        transition-duration: 0s;
-        color: red;
-    }
-    .btn-danger:hover {
-        background-color: red;
-        border-color: red;
-        color: white;
-    }
-</style>
 
 <div class="container" method="POST">
     <table class="table table-sm">
