--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -2,45 +2,13 @@
 
 {% block content %}
 
-{% include 'navbar2.html' %}
-<style>
-    .btn-login {
-        background-color: #0a497e;
-        border-color: #0a497e;
-        color: white;
-        transition: background-color 0.5s; 
-    }
-    .btn-login:hover{
-        background-color: #113a5c;
-        border-color: #113a5c;
-        color: white;
-    }
-    .login-box {
-    width: 300px; 
-    padding: 20px; 
-    background-color: white; 
-    border-radius: 5px; 
-    box-shadow: 0px 0px 3px  #576672; 
-    margin: 0 auto; 
-    margin-top: 30px;
-}
-.h1-bg {
-        font-size: 40px;
-        text-align: center;
-        position: relative;
-    }
-    .h1-bg::before {
-        content: "";
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        right: 0;
-        height: 2px;
-        background: linear-gradient(to right, white, #0a497e, white); /* Começa mais escuro no meio e fica mais claro nas bordas */
-    }
-</style>
+{% include 'navbar.html' %}
 
 {% from "suporteenvio.html" import render_field %}
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+
+
 <div class="row">
     <div class="text-center"></div>
     <div class="text-center">
