--- a/proj_SpecialIssues/website/templates/users/users_navbar.html
+++ b/proj_SpecialIssues/website/templates/users/users_navbar.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="d-flex">
-        <form action="{{ url_for('search') }}" method="POST">
+        <form action="/search" method="POST">
           <div class="search-form">
               <input type="text" class="form-control" placeholder="Pesquisar palavras-chave" autofocus="autofocus" name="search-box" value="{{ session.get('search_value', '') }}">
               <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
