fix responsive nav

--- a/proj_SpecialIssues/website/templates/users/users_navbar.html
+++ b/proj_SpecialIssues/website/templates/users/users_navbar.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       
-      <a class="navbar-brand me-auto" href="/">
+      <a class="navbar-brand" href="/">
         <h1 class="titulo">Special Issues</h1>
         <p class="subtitulo">Ciência da computação</p>
       </a>
