--- a/proj_SpecialIssues/website/static/css/styles_nav.css
+++ b/proj_SpecialIssues/website/static/css/styles_nav.css
@@ -33,8 +33,8 @@
   font-size: 15px;
 }
 .search-form {
-  display: flex; /* Torna os elementos filhos flexíveis para alinhamento */
-  align-items: center; /* Alinha verticalmente ao centro */
+  display: flex; 
+  align-items: center; 
 }
 
 .form-control {
@@ -134,22 +134,26 @@
   font-size: 25px;
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (max-width: 431px) {
   .navbar {
-    flex-direction: row; /* Altera para exibir itens na horizontal */
-    justify-content: space-between; /* Distribui os itens na horizontal */
-    align-items: center; /* Alinha itens na vertical */
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
   }
-
-  .navbar-nav {
-    margin-left: 80px;
+  .navbar-brand {
+    margin-bottom: 10px;
+    align-items: center;
+    flex-direction: column; 
+    text-align: center; 
+    justify-content: center;
+    margin: auto;
   }
-
-  .search-form {
-    margin: 0; /* Remove o espaçamento abaixo do formulário de pesquisa */
+  .navbar-brand h1 {
+    font-size: 30px;
+    justify-content: center;
   }
-
-  .sair-button {
-    margin-left: 0; /* Remove o espaçamento entre o botão de pesquisa e o botão de sair */
+  .navbar-brand p {
+    font-size: 15px;
   }
+ 
 }
