--- a/proj_SpecialIssues/website/templates/users/users_navbar.html
+++ b/proj_SpecialIssues/website/templates/users/users_navbar.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       
       <a class="navbar-brand" href="/">
